--- a/Views/Permissions/Partials/Modal-CreateRole.cshtml
+++ b/Views/Permissions/Partials/Modal-CreateRole.cshtml
@@ -1,24 +1,32 @@
+@model WebAppCS.Models.Roles
+
 <div class="modal fade" id="modal-success">
     <div class="modal-dialog">
         <div class="modal-content ">
             <div class="modal-header bg-success">
-                <h4 class="modal-title">Crear nuevo rol</h4>
+                <h4 class="modal-title">Crear rol</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <p>Crear un nuevo rol</p>
-            </div>
-            <div class="modal-footer justify-content-between">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-
-                <form id="deleteForm" method="post" action="@Url.Action("Insert", "Permissions")">
-                    <input type="hidden" name="id" id="roleId">
-                    <button type="submit" class="btn btn-success">Crear</button>
-                </form>
-
-            </div>
+            <form id="createForm" method="post" action="@Url.Action("Insert", "Permissions")">
+                <div class="modal-body">
+                    <input type="text" id="rol" asp-for="Nombre" class="form-control" placeholder="Rol">
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="submit" class="btn btn-success">Guardar</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $("#modal-success").on("shown.bs.modal", function () {
+            $.validator.unobtrusive.parse("#createForm");
+        });
+    });
+</script>
