--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -27,6 +27,7 @@
 
         <div class="container-fluid">
             <div class="row">
+
                 <div class="col-md-6">
                     <div class="card card-info">
                         <div class="card-header">
@@ -119,6 +120,27 @@
                                         <span asp-validation-for="Id_estado" class="text-danger"></span>
                                     </div>
                                 </div>
+                                
+                            </div>
+
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-info float-right">Salvar Cambios</button>
+                                <button type="reset" class="btn btn-secondary">Resetear</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card card-warning">
+                        <div class="card-header">
+                            <h3 class="card-title">Editar Contraseña</h3>
+                        </div>
+
+                        <form asp-action="UpdatePassword" asp-controller="Users" method="post">
+                            <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
+
+                            <div class="card-body">
 
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
@@ -138,12 +160,13 @@
                             </div>
 
                             <div class="card-footer">
-                                <button type="submit" class="btn btn-info float-right">Salvar Cambios</button>
-                                <button type="reset" class="btn btn-secondary">Resetear</button>
+                                <button type="submit" class="btn btn-warning float-right">Salvar Cambios</button>
+                                <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
