--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
                     <div class="alert alert-danger">@ViewBag.Error</div>
                 }
 
-                <form action="@Url.Action("FakeLogin", "Account")" method="post">
+                <form action="@Url.Action("Login", "Account")" method="post">
                     <div class="input-group mb-3">
                         <input type="email" name="email" class="form-control" placeholder="Correo electrónico" required>
                         <div class="input-group-append">
